<resources>
    <string name="app_name">Assignment</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="title_not_available">Title not available</string>
    <string name="desc_not_available">Description not available</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="api_key">AIzaSyB8L46PhZo6sHpvnxXO0j5YMNC5_qrW5-U</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_routes">More Routes</string>
    <string name="route">Route</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="direction">Direction</string>
</resources>
